--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,12 @@ dependencies {
     compile group: 'org.modelmapper', name: 'modelmapper', version: '0.7.5'
     compile 'io.medaid.errorhandler:ErrorHandler:0.0.3'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.28.2'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
 
 test {
