--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
     id 'pmd'
+    id 'org.unbroken-dome.test-sets' version '2.2.1'
 }
 
 ext {
@@ -29,6 +30,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+testSets {
+    integrationTest
 }
 
 repositories {
@@ -62,11 +67,23 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    implementation group: 'com.google.guava', name: 'guava', version: '28.2-jre'
+
+    integrationTestCompileOnly 'org.projectlombok:lombok'
+    integrationTestAnnotationProcessor 'org.projectlombok:lombok'
+
 }
 
-test {
+tasks.withType(Test) {
     useJUnitPlatform()
 }
+
+configurations {
+    developmentOnly
+    integration.extendsFrom testCompile
+}
+
+
 
 pmd {
     ruleSets = [
@@ -75,3 +92,4 @@ pmd {
         'java-unusedcode'
     ]
 }
+
